--- a/Witchlight Woods/Assets/Scripts/WitchlightWoods.asmdef
+++ b/Witchlight Woods/Assets/Scripts/WitchlightWoods.asmdef
@@ -20,11 +20,12 @@
         "GUID:4307f53044263cf4b835bd812fc161a4",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
         "GUID:15fc0a57446b3144c949da3e2b9737a9",
         "GUID:516a5277b8c3b4f4c8cc86b77b1591ff",
+        "GUID:b4517ec124862cb4bb3b8b27d72843a6",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:f06555f75b070af458a003d92f9efb00",
-        ""
+        "GUID:f06555f75b070af458a003d92f9efb00"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
