Some crash fixes

--- a/Witchlight Woods/Assets/Scripts/WitchlightWoods.asmdef
+++ b/Witchlight Woods/Assets/Scripts/WitchlightWoods.asmdef
@@ -26,7 +26,9 @@
         "GUID:b4517ec124862cb4bb3b8b27d72843a6",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:f06555f75b070af458a003d92f9efb00",
-        "GUID:efa45043feb7e4147a305b73b5cea642"
+        "GUID:efa45043feb7e4147a305b73b5cea642",
+        "GUID:0c752da273b17c547ae705acf0f2adf2",
+        "GUID:44d09cf463b68274884d8a3c8a94e528"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
